--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=challenge
+logging.level.springfox.documentation=DEBUG
+springfox.documentation.swagger-ui.base-url=/documentation
+server.servlet.context-path=/mvc
+springfox.documentation.swagger.v2.use-model-v3=false
